rns-lang/tests/snapshots/lexer-strings-basic_unterminated_string.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
"String with no ending quote
.end
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/strings/basic_unterminated_string.ja:2:1 ]
   │
 2 │ "String with no ending quote
   │ ┬  
   │ ╰── String started here is not terminated
   │ 
   │ Note: Multiple-line strings are not supported, make sure to close the string before the end of the line.
───╯
